补充多 agent 执行链路注释与细节收口